--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,94 @@ header{
 header img{
     width: 30px;
     height: 30px;
-    margin-right: 10px;
+    margin-right: 30px;
     filter: opacity(1) drop-shadow(0 0 0 white); 
+}
+main{
+    background-image: url('../assets/image/Cover.png');
+    object-fit: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 95vh;
+    background-position-x:center;
+    background-position-y:center;
+    display: flex;
+    flex-direction: column;
+}
+.main-head{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+}
+.main-head img{
+    width: 200px;
+}
+.main-head a{
+    color: white;
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-right: 23px;
+    text-decoration: none;
+    border-bottom: 1.5px solid;
+}
+.main-body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.main-body h1{
+    color: white;
+    text-align: center;
+    font-size: 3.8rem;
+    font-weight: 500;
+    line-height: 4.4rem;
+    margin-bottom: 30px;
+}
+.main-body button{
+    border-radius: 2px;
+    height: 50px;
+    width: 130px;
+    padding: 10px;
+    color: #23282d;
+    border: none;
+    font-size: 1.8rem;
+    font-weight: bold;
+    background-color: #61f2f5;
+}
+@media (min-width:600px) {
+    header{
+        justify-content: flex-end;
+    }
+    .main-head img{
+        width: 300px;
+    }
+    .main-head a{
+        font-size: 2.7rem;
+    }
+    .main-body h1{
+        font-size: 3.5rem;
+        line-height: 4.4rem;
+        max-width: 500px;
+    }
+}
+@media (min-width:900px) {
+    header{
+        justify-content: flex-end;
+    }
+    .main-head img{
+        width: 400px;
+    }
+    .main-head a{
+        font-size: 3.6rem;
+    }
+    .main-body h1{
+        font-size: 6rem;
+        line-height: 6.4rem;
+        max-width: 800px;
+    }
 }
