--- a/css/sobre-mi.css
+++ b/css/sobre-mi.css
@@ -43,6 +43,93 @@ main{
     text-decoration: none;
     border-bottom: 1.5px solid;
 }
+
+.contenedor-noticias{
+    margin-top: 20px;
+    background-color: #e6e9ed;
+    width: 100%;
+}
+.img-title img{
+    width: 100%;
+    padding: 40px 20px 10px 20px;
+}
+.description-title{
+    width: 100%;
+    padding: 10px 20px 40px 20px;
+}
+.description-title h1{
+    font-size: 2.8rem;
+    font-weight: bold;
+    line-height: 2.4rem;
+    margin-bottom: 10px;
+}
+.description-title p{
+    font-size: 1.4rem;
+    font-weight: 400;
+    text-align: justify;
+}
+.contenedor-blogposts{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.contenedor-title{
+    width: 100%;
+    margin: 40px 20px 10px 20px;
+    max-width: 1090px;
+}
+.contenedor-title .title{
+    padding-bottom: 20px;
+    margin: 0 20px;
+    text-align: center;
+    font-size: 1.6rem;
+    border-bottom: 2px solid #e6e9ed;
+}
+.contenedor-card-proyectos{
+    display: grid;
+    padding: 0 20px;
+    grid-template-columns: auto;
+    gap: 30px;
+}
+.card-proyectos h3{
+    font-size: 1.8rem;
+    line-height: 40px;
+}
+.card-proyectos p{
+    font-size: 1.4rem;
+    font-weight: 500;
+    text-align: justify;
+}
+.parrafo{
+    margin-top: 20px;
+}
+.contendor-contacto{
+    margin-top: 40px;
+    background-color: #e6e9ed;
+    width: 100%;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    padding: 0 20px;
+}
+
+
+footer .secundary-footer{
+    width: 100%;
+    height: 30px;
+    background-color: #61f2f5;
+}
+footer .primary-footer{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: black;
+    font-size: 1.4rem;
+    text-align: center;
+}
 @media (min-width:600px) {
     header{
         justify-content: flex-end;
