--- a/css/sobre-mi.css
+++ b/css/sobre-mi.css
@@ -77,21 +77,23 @@ main{
 .contenedor-title{
     width: 100%;
     margin: 40px 20px 10px 20px;
-    max-width: 1090px;
+    max-width: 1200px;
+    margin-bottom: 35px;
 }
 .contenedor-title .title{
     padding-bottom: 20px;
     margin: 0 20px;
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     border-bottom: 2px solid #e6e9ed;
 }
 .contenedor-card-proyectos{
     display: grid;
     padding: 0 20px;
     grid-template-columns: auto;
-    gap: 30px;
+    gap: 50px;
 }
+
 .card-proyectos h3{
     font-size: 1.8rem;
     line-height: 40px;
@@ -111,6 +113,20 @@ main{
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     padding: 0 20px;
+}
+.contacto{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    font-size: 1rem;
+    line-height: 1.4rem;
+    margin: 20px 0;
+}
+.contacto img{
+    width: 50px;
+    height: 50px;
 }
 
 
@@ -142,6 +158,39 @@ footer .primary-footer{
         font-size: 2.4rem;
         margin-right: 25px;
     }
+    .contenedor-noticias{
+        display: flex;
+        justify-content: center; 
+    }
+    .contenedor-noticias_body{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        max-width: 1200px;
+    }
+    .img-title img{
+        max-width: 700px;
+        padding: 40px 20px;
+    }
+    .description-title{
+        width: 100%;
+        padding: 0 20px
+    }
+    .contenedor-card-proyectos{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .seccion3{
+        grid-area: 2 / 1 / 3 / 3;
+        max-width: 400px; 
+        justify-self: center;
+    }
+    .contendor-contacto{
+        grid-template-columns: repeat(2, 240px);
+        grid-template-rows: none;
+        justify-content: center;
+        gap: 100px;
+    }
 }
 @media (min-width:900px) {
     .main-head img{
@@ -150,5 +199,17 @@ footer .primary-footer{
     .main-head a{
         margin-left: 70px;
     }
-
+    .contenedor-card-proyectos{
+        max-width: 1200px;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .seccion3{
+        grid-area: unset;
+    }
+    .contendor-contacto{
+        grid-template-columns: repeat(2, 350px);
+        grid-template-rows: none;
+        justify-content: center;
+        gap: 200px;
+    }
 }
