--- a/css/blogspot.css
+++ b/css/blogspot.css
@@ -43,69 +43,45 @@ main{
     text-decoration: none;
     border-bottom: 1.5px solid;
 }
-
-.contenedor-noticias{
-    margin-top: 20px;
-    background-color: #e6e9ed;
+.img-blog{
+    width: 100%;
+    padding: 20px;
+    max-width: 1100px;
+    margin: 0 auto;
+    max-height: 450px;
+    overflow: hidden;
+}
+.img-blog img{
     width: 100%;
 }
-.img-title img{
+.seccion-blog{
+    padding: 20px 20px 0 20px;
     width: 100%;
-    padding: 40px 20px 10px 20px;
-}
-.description-title{
-    width: 100%;
-    padding: 10px 20px 40px 20px;
-}
-.description-title h1{
-    font-size: 2.8rem;
-    font-weight: bold;
-    line-height: 2.4rem;
-    margin-bottom: 10px;
-}
-.description-title p{
-    font-size: 1.4rem;
-    font-weight: 400;
-    text-align: justify;
-}
-.contenedor-blogposts{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-.contenedor-title{
-    width: 100%;
-    margin: 40px 20px 10px 20px;
-    max-width: 1200px;
-    margin-bottom: 35px;
-}
-.contenedor-title .title{
-    padding-bottom: 20px;
-    margin: 0 20px;
+    font-size: 1.8rem;
     text-align: center;
-    font-size: 1.8rem;
-    border-bottom: 2px solid #e6e9ed;
+    max-width: 600px;
+    margin: 0 auto;
 }
-.contenedor-card-proyectos{
-    display: grid;
-    padding: 0 20px;
-    grid-template-columns: auto;
-    gap: 50px;
+.seccion-blog .title{
+    border-bottom: 1px solid gray;
+    padding-bottom: 20px;
+}
+.contenido-blog{
+    padding: 20px;
+    max-width: 600px;
+    margin: 0 auto;
+}
+.contenido-blog h2{
+    font-size: 2.6rem;
+    margin-bottom: 20px;
+}
+.contenido-blog p{
+    line-height: 2rem;
+    text-align: justify;
+    font-size: 1.4rem;
+    padding-bottom: 20px;
 }
 
-.card-proyectos h3{
-    font-size: 1.8rem;
-    line-height: 40px;
-}
-.card-proyectos p{
-    font-size: 1.4rem;
-    font-weight: 500;
-    text-align: justify;
-}
-.parrafo{
-    margin-top: 20px;
-}
 .contendor-contacto{
     margin-top: 40px;
     background-color: #e6e9ed;
@@ -125,11 +101,9 @@ main{
     margin: 20px 0;
 }
 .contacto img{
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
 }
-
-
 footer .secundary-footer{
     width: 100%;
     height: 30px;
@@ -146,6 +120,7 @@ footer .primary-footer{
     font-size: 1.4rem;
     text-align: center;
 }
+
 @media (min-width:600px) {
     header{
         justify-content: flex-end;
@@ -158,39 +133,13 @@ footer .primary-footer{
         font-size: 2.4rem;
         margin-right: 25px;
     }
-    .contenedor-noticias{
-        display: flex;
-        justify-content: center; 
-    }
-    .contenedor-noticias_body{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        max-width: 1200px;
-    }
-    .img-title img{
-        max-width: 700px;
-        padding: 40px 20px;
-    }
-    .description-title{
-        width: 100%;
-        padding: 0 20px
-    }
-    .contenedor-card-proyectos{
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .seccion3{
-        grid-area: 2 / 1 / 3 / 3;
-        max-width: 400px; 
-        justify-self: center;
-    }
     .contendor-contacto{
         grid-template-columns: repeat(2, 240px);
         grid-template-rows: none;
         justify-content: center;
         gap: 100px;
     }
+
 }
 @media (min-width:900px) {
     .main-head img{
@@ -198,13 +147,6 @@ footer .primary-footer{
     }
     .main-head a{
         margin-left: 70px;
-    }
-    .contenedor-card-proyectos{
-        max-width: 1200px;
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .seccion3{
-        grid-area: unset;
     }
     .contendor-contacto{
         grid-template-columns: repeat(2, 350px);
