--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ html{
     font-family: 'Roboto', sans-serif;
 }
 header{
-    background-color: #61f2f5;
+    background-color: #000;
     width: 100%;
     height: 60px;
     display: flex;
